--- a/dream pop/dreampop.html
+++ b/dream pop/dreampop.html
@@ -24,7 +24,7 @@
     <li>
         <a href="#" class="dreampop1">Dream Pop ▾</a>
         <ul class="dropdown4">
-            <li><a href="/index/" class="dreampop1">All</a></li>
+            <li><a href="/index.html" class="dreampop1">All</a></li>
             <li><a href="/hardcore/hardcore.html" class="dreampop1">Hardcore</a></li>
             <li><a href="/shoegaze/shoegaze.html" class="dreampop1">Shoegaze</a></li>
             <li><a href="/alternative/alternative.html" class="dreampop1">Alternative</a></li>
